example/lib/src/generated/errors/errors_localization_it.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Italian (`it`).
class ErrorsLocalizationIt extends ErrorsLocalization {
  ErrorsLocalizationIt([String locale = 'it']) : super(locale);

  @override
  String get error => 'Si è verificato un errore';

  @override
  String get unexpectedError => 'Si è verificato un errore imprevisto';

  @override
  String get bugReportSentText => 'Bug report inviato con successo.';
}
